[metadata]
name = fcctrans
version = 0.9.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/fcc-uls-transactions
description = Plot FCC ULS license grants vs. time
keywords =
  fcc
  federal communications commission
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  pandas

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  findssh = findssh:main


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
