[metadata]
name = fcctrans
version = 0.9.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/fcc-uls-transactions
description = Plot FCC ULS license grants vs. time
keywords =
  fcc
  federal communications commission
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
include_package_data = True
packages = find:
install_requires =
  numpy
  pandas

[options.extras_require]
tests =
  flake8
  mypy
